# sudo-rm-rf

./: .gitignore  LICENSE  Pixels.py  README.md  image_version_control.py  main.py  pyproject.toml  requirements.txt  tempCodeRunnerFile.python
Graphs/: iitroorkee.pkl
Node/: nodes.py
VCS_server/: file_server.py  tempCodeRunnerFile.py
Web/: server.js  servers.js  user.js
Web/config/: keys.js
Web/models/: User.js
Web/my-app/: package-lock.json  package.json
Web/public/: home.html  register.html
pixv/: .gitignore  feature.py  file_server.py
pixv/Node/: diffs.py  nodes.py
pixv/utils/: Pixels.py  helper.py
src/: feature.py  main.py  requirements.txt  temp.py
src/.cph/: .A_Brick_Wall.cpp_3c6971ce75a4fb8280654d41645a6957.prob  .A_We_Got_Everything_Covered.cpp_360214c29e797ad454367a0fb8ff0e17.prob  .B_A_Balanced_Problemset.cpp_b760b9d406559f853027563b8285ed41.prob  .B_Minimize_Inversions.cpp_384ac98d3bc7d3bc954b4bea7a6f0646.prob  .C_Did_We_Get_Everything_Covered.cpp_f08b1383b2d4cdd2633f8d71f10d8d75.prob  .C_XOR_distance.cpp_10da071f92c3b64e7a3b1adefb342b3c.prob
src/Node/: diffs.py  nodes.py
src/server/: pull_file.py  push_file.py
src/utils/: Pixels.py  hash.py
utils/: helper.py
